feat(sales/quotes): ajustes en DTO, repos, servicios y controladores; update SecurityConfig